# mentat

./: Cargo.toml
core/src/: lib.rs  types.rs
db/: Cargo.toml
db/src/: db.rs  debug.rs  errors.rs  internal_types.rs  lib.rs  timelines.rs  tx.rs  types.rs  upsert_resolution.rs
edn/benches/: bench.rs
edn/src/: edn.rustpeg  entities.rs  entity_builder.rs  lib.rs  symbols.rs  types.rs
edn/tests/: tests.rs
query-algebrizer/src/clauses/: inputs.rs  mod.rs
query-projector/src/: binding_tuple.rs  lib.rs
query/src/: lib.rs
sdks/android/Mentat/: publish.gradle
src/: conn.rs  entity_builder.rs  errors.rs  lib.rs  query.rs  query_builder.rs  store.rs  stores.rs  vocabulary.rs
src/common/datomish/: transact.cljc
sync15/logins/: Cargo.toml
sync15/logins/src/: credentials.rs  errors.rs  lib.rs  logins.rs  passwords.rs  types.rs
tests/: music-schema.dtm  query.rs  vocabulary.rs
tolstoy/src/: errors.rs
tools/cli/: Cargo.toml
tools/cli/src/mentat_cli/: repl.rs
tx-parser/benches/: bench.rs
tx-parser/src/: lib.rs
tx/fixtures/: test_upsert_vector.edn
tx/src/: entities.rs
